lib/src/ffi/bindings.dart

// GENERATED CODE - DO NOT MODIFY BY HAND
// ignore_for_file: type=lint, camel_case_types, non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: unused_import
import 'dart:ffi' as ffi;

/// Bindings for `src/receipt_image_enhancer.h`.
///
/// GENERATED CODE - DO NOT MODIFY BY HAND.
/// Regenerate with `dart run tool/ffigen.dart`.
///
class ReceiptImageEnhancerBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  ReceiptImageEnhancerBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  ReceiptImageEnhancerBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  int rie_abi_version() {
    return _rie_abi_version();
  }

  late final _rie_abi_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function()>>('rie_abi_version');
  late final _rie_abi_version = _rie_abi_versionPtr
      .asFunction<int Function()>();

  int rie_enhance_file(
    ffi.Pointer<ffi.Char> input_path,
    ffi.Pointer<ffi.Char> output_path,
    ffi.Pointer<rie_options_v1> options,
    ffi.Pointer<rie_result_v1> result,
    ffi.Pointer<ffi.Pointer<ffi.Char>> error_message,
  ) {
    return _rie_enhance_file(
      input_path,
      output_path,
      options,
      result,
      error_message,
    );
  }

  late final _rie_enhance_filePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<rie_options_v1>,
            ffi.Pointer<rie_result_v1>,
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
          )
        >
      >('rie_enhance_file');
  late final _rie_enhance_file = _rie_enhance_filePtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<rie_options_v1>,
          ffi.Pointer<rie_result_v1>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
        )
      >();

  int rie_enhance_bytes(
    ffi.Pointer<ffi.Uint8> input_data,
    int input_length,
    ffi.Pointer<rie_options_v1> options,
    ffi.Pointer<ffi.Pointer<ffi.Uint8>> output_data,
    ffi.Pointer<ffi.Size> output_length,
    ffi.Pointer<rie_result_v1> result,
    ffi.Pointer<ffi.Pointer<ffi.Char>> error_message,
  ) {
    return _rie_enhance_bytes(
      input_data,
      input_length,
      options,
      output_data,
      output_length,
      result,
      error_message,
    );
  }

  late final _rie_enhance_bytesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<ffi.Uint8>,
            ffi.Size,
            ffi.Pointer<rie_options_v1>,
            ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
            ffi.Pointer<ffi.Size>,
            ffi.Pointer<rie_result_v1>,
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
          )
        >
      >('rie_enhance_bytes');
  late final _rie_enhance_bytes = _rie_enhance_bytesPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Uint8>,
          int,
          ffi.Pointer<rie_options_v1>,
          ffi.Pointer<ffi.Pointer<ffi.Uint8>>,
          ffi.Pointer<ffi.Size>,
          ffi.Pointer<rie_result_v1>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
        )
      >();

  int rie_detect_document_file(
    ffi.Pointer<ffi.Char> input_path,
    ffi.Pointer<rie_detection_result_v1> result,
    ffi.Pointer<ffi.Pointer<ffi.Char>> error_message,
  ) {
    return _rie_detect_document_file(input_path, result, error_message);
  }

  late final _rie_detect_document_filePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int32 Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<rie_detection_result_v1>,
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
          )
        >
      >('rie_detect_document_file');
  late final _rie_detect_document_file = _rie_detect_document_filePtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<rie_detection_result_v1>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
        )
      >();

  void rie_free_buffer(ffi.Pointer<ffi.Void> ptr) {
    return _rie_free_buffer(ptr);
  }

  late final _rie_free_bufferPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Void>)>>(
        'rie_free_buffer',
      );
  late final _rie_free_buffer = _rie_free_bufferPtr
      .asFunction<void Function(ffi.Pointer<ffi.Void>)>();
}

enum rie_status {
  RIE_OK(0),
  RIE_INVALID_ARGUMENT(1),
  RIE_FILE_NOT_FOUND(2),
  RIE_UNSUPPORTED_FORMAT(3),
  RIE_DECODE_FAILED(4),
  RIE_ENCODE_FAILED(5),
  RIE_OUT_OF_MEMORY(6),
  RIE_PROCESSING_FAILED(7),
  RIE_NATIVE_LIBRARY_UNAVAILABLE(8);

  final int value;
  const rie_status(this.value);

  static rie_status fromValue(int value) => switch (value) {
    0 => RIE_OK,
    1 => RIE_INVALID_ARGUMENT,
    2 => RIE_FILE_NOT_FOUND,
    3 => RIE_UNSUPPORTED_FORMAT,
    4 => RIE_DECODE_FAILED,
    5 => RIE_ENCODE_FAILED,
    6 => RIE_OUT_OF_MEMORY,
    7 => RIE_PROCESSING_FAILED,
    8 => RIE_NATIVE_LIBRARY_UNAVAILABLE,
    _ => throw ArgumentError('Unknown value for rie_status: $value'),
  };
}

enum rie_preset {
  RIE_PRESET_BALANCED(0),
  RIE_PRESET_READABLE(1),
  RIE_PRESET_SCAN(2);

  final int value;
  const rie_preset(this.value);

  static rie_preset fromValue(int value) => switch (value) {
    0 => RIE_PRESET_BALANCED,
    1 => RIE_PRESET_READABLE,
    2 => RIE_PRESET_SCAN,
    _ => throw ArgumentError('Unknown value for rie_preset: $value'),
  };
}

enum rie_output_format {
  RIE_OUTPUT_JPEG(0),
  RIE_OUTPUT_PNG(1);

  final int value;
  const rie_output_format(this.value);

  static rie_output_format fromValue(int value) => switch (value) {
    0 => RIE_OUTPUT_JPEG,
    1 => RIE_OUTPUT_PNG,
    _ => throw ArgumentError('Unknown value for rie_output_format: $value'),
  };
}

enum rie_warning_flags {
  RIE_WARN_NONE(0),
  RIE_WARN_DOCUMENT_NOT_DETECTED(1),
  RIE_WARN_LOW_DOCUMENT_CONFIDENCE(2),
  RIE_WARN_INPUT_DOWNSCALED(4);

  final int value;
  const rie_warning_flags(this.value);

  static rie_warning_flags fromValue(int value) => switch (value) {
    0 => RIE_WARN_NONE,
    1 => RIE_WARN_DOCUMENT_NOT_DETECTED,
    2 => RIE_WARN_LOW_DOCUMENT_CONFIDENCE,
    4 => RIE_WARN_INPUT_DOWNSCALED,
    _ => throw ArgumentError('Unknown value for rie_warning_flags: $value'),
  };
}

final class rie_options_v1 extends ffi.Struct {
  @ffi.Uint32()
  external int struct_size;

  @ffi.Uint32()
  external int abi_version;

  @ffi.Int32()
  external int preset;

  @ffi.Int32()
  external int auto_crop;

  @ffi.Int32()
  external int correct_perspective;

  @ffi.Int32()
  external int max_output_dimension;

  @ffi.Int32()
  external int output_format;

  @ffi.Int32()
  external int jpeg_quality;
}

final class rie_result_v1 extends ffi.Struct {
  @ffi.Int32()
  external int width;

  @ffi.Int32()
  external int height;

  @ffi.Int32()
  external int document_detected;

  @ffi.Int32()
  external int crop_applied;

  @ffi.Double()
  external double detection_confidence;

  @ffi.Int64()
  external int processing_time_us;

  @ffi.Int32()
  external int warning_flags;
}

final class rie_point extends ffi.Struct {
  @ffi.Double()
  external double x;

  @ffi.Double()
  external double y;
}

final class rie_detection_result_v1 extends ffi.Struct {
  @ffi.Int32()
  external int detected;

  @ffi.Double()
  external double confidence;

  external rie_point top_left;

  external rie_point top_right;

  external rie_point bottom_right;

  external rie_point bottom_left;

  @ffi.Int32()
  external int image_width;

  @ffi.Int32()
  external int image_height;
}

const int RIE_ABI_VERSION = 1;
